# book2pod-rss

./: .gitignore  Cargo.toml  LICENSE  README.md  test.epub
src/: lib.rs
src/text_to_speach/: mod.rs
src/text_to_speach/file_parser/: mod.rs
src/text_to_speach/provider/: google.rs  mod.rs  openai.rs
