[package]
authors = ["madiele92@gmail.com"]
name = "book2pod-rss"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "book2pod"
path = "src/main.rs"

[dependencies]
reqwest = { features = ["json"], version = "=0.11.24" }
tokio = { features = ["full"], version = "=1.36.0" }
anyhow = "=1.0.79"
serde_json = "=1.0.113"
tts_rust = "=0.3.5"
locale-codes = "=0.3.0"
trait-variant = "=0.1.1"
